Fix the z-index of the dark background overlay

--- a/src/scss/components/hamburger.scss
+++ b/src/scss/components/hamburger.scss
@@ -1,7 +1,7 @@
 /* Fades in the dark background */
 .darkenbg {
     opacity: 0.7 !important;
-    z-index: 5 !important;
+    z-index: 1 !important;
 }
 
 #darkenbackground {
@@ -11,8 +11,8 @@
     background: #000;
     z-index: 0;
     opacity: 0;
-    -moz-transition:all 0.4s;
-    -webkit-transition:all 0.4s;
+    -moz-transition: all 0.4s;
+    -webkit-transition: all 0.4s;
     transition: all 0.4s;
 }
 
